# nocaselist

./: .coveragerc  .flake8  .gitignore  .travis.yml  INSTALL.md  Makefile  README.md  README.rst  SECURITY.md  appveyor.yml  dev-requirements.txt  minimum-constraints-develop.txt  minimum-constraints.txt  pylintrc  pyproject.toml  requirements.txt  rtd-requirements.txt  setup.py  test-requirements.txt  towncrier.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: publish.yml  test.yml
changes/: 242.cleanup.rst
design/: README.md
docs/: appendix.rst  changes.rst  conf.py  development.rst  index.rst  intro.rst  reference.rst
nocaselist/: __init__.py  _nocaselist.py  _version.py
packaging/fedora/: Makefile  README.md  python-nocaselist-1.0.2-1.fc34.src.rpm  python-nocaselist.spec
tests/installtest/: test_install.sh
tests/unittest/: test_nocaselist.py  test_package.py
tests/utils/: import_installed.py  simplified_test_function.py
